--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Inwepo Fireworks</title>
+   <title>hbdjupeww</title>
    <style>
    * {
       margin: 0;
